create github pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="about.html" aria-expanded="false">ABOUT</a></li><li class="nav-item dropdown"><a class="nav-link link" href="featured-blocks.html" aria-expanded="false">SOLUTIONS</a></li><li class="nav-item"><a class="nav-link link" href="startups.html" aria-expanded="false">STARTUPS</a></li><li class="nav-item"><a class="nav-link link" href="non-profits.html" aria-expanded="false">NONPROFITS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="contact.html">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="about.html" aria-expanded="false">ABOUT</a></li><li class="nav-item dropdown"><a class="nav-link link" href="featured.html" aria-expanded="false">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="startups.html" aria-expanded="false">STARTUPS</a></li><li class="nav-item"><a class="nav-link link" href="non-profits.html" aria-expanded="false">NONPROFITS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="contact.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop web generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/way-to-success.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap site design software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/way-to-success.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
 
@@ -101,7 +101,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><em>Our vision is to make sophisticated marketing simple.</em>&nbsp;<span style="font-size: 1.07rem; line-height: 1.5;">SaaSify.io empowers small to mid-size organizations to start, scale and sustain marketing to fuel growth. Our software-and-a-service "building blocks" fuse expert know-how, modern practices and smart apps to achieve specific brand, market, and customer goals with a transparent and predictable system. Get started with CMO Services or build your own Marketing-As-A-Service.</span></p></div>
+            <div class="col-xs-12 lead"><p><em>We make sophisticated marketing simple and affordable marketing accessible.</em>&nbsp;<span style="font-size: 1.07rem; line-height: 1.5;">SaaSify.io powers small to mid-size organizations to scale marketing for growth. Our software-and-a-service model fuses expert know-how with modern practices and apps to achieve specific brand, market, and customer goals. Get started with Strategic Marketing or turnkey Marketing-As-A-Service.</span></p></div>
         </div>
     </div>
 
@@ -111,8 +111,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">CMO SERVICES</h3>
-                
+                <h3 class="mbr-section-title display-2">STRATEGIC MARKETING</h3>
+                <small class="mbr-section-subtitle">FRACTIONAL CMO SERVICES</small>
             </div>
         </div>
     </div>
@@ -194,8 +194,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">MARKETING "BUILDING BLOCKS"</h3>
-                
+                <h3 class="mbr-section-title display-2">MARKETING-AS-A-SERVICE</h3>
+                <small class="mbr-section-subtitle">TURNKEY MARKETING BY OBJECTIVE</small>
             </div>
         </div>
     </div>
@@ -225,12 +225,12 @@
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
                                       <h4 class="item-title">Brand Presence</h4>
-                                      <h5 class="item-subtitle"><div>Create brand identity and digital presence to anchor (hub) and propagate (spokes) brand.</div></h5>
+                                      <h5 class="item-subtitle"><div>Create brand identity and digital presence to anchor (hub) and propagate (spokes) brand promise and positioning.</div></h5>
                                       <div class="price-block">
                                           <span class="shop-item-price"></span>
                                       </div>
                                       <div class="card-description"><p></p><ul><li>Brand Identity &amp; Guide</li><li>Website<br></li><li>Social Media &amp; Directories</li><li>Search Engine</li></ul><p></p></div>   
-                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured-blocks.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
+                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
                                   </div>        
                               </div>
                           </div><div class="mbr-gallery-item mbr-gallery-item__mobirise3" data-tags="Market" data-seller="false">
@@ -242,12 +242,12 @@
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
                                       <h4 class="item-title">Product-Market Fit</h4>
-                                      <h5 class="item-subtitle"><div>Validate market readiness and brand promise. Assess product capabilities against customer value, competing alternatives to guide product roadmap, market positioning.</div></h5>
+                                      <h5 class="item-subtitle"><div>Validate market readiness. Assess product strengths against customer value and competing alternatives to guide product, marketing, sales.</div></h5>
                                       <div class="price-block">
                                           <span class="shop-item-price"></span>
                                       </div>
                                       <div class="card-description"></div>   
-                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="index.html#header3-4m" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
+                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="index.html#header3-4j" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
                                   </div>        
                               </div>
                           </div><div class="mbr-gallery-item mbr-gallery-item__mobirise3" data-tags="Customer" data-seller="false">
@@ -264,7 +264,7 @@
                                           <span class="shop-item-price"></span>
                                       </div>
                                       <div class="card-description"><p></p><p></p><p></p></div>   
-                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured-blocks.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
+                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
                                   </div>        
                               </div>
                           </div><div class="mbr-gallery-item mbr-gallery-item__mobirise3" data-tags="Customer" data-seller="false">
@@ -276,7 +276,7 @@
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
                                       <h4 class="item-title">Sales Enablement</h4>
-                                      <h5 class="item-subtitle"><div>Map marketing, sales, partner coverage for markets / customers. Create collateral and tools to enable sales and partners.</div></h5>
+                                      <h5 class="item-subtitle"><div>Map marketing, sales, channel partner coverage for markets / customers. Create content and tools to enable sales and partners.</div></h5>
                                       <div class="price-block">
                                           <span class="shop-item-price"></span>
                                       </div>
@@ -293,12 +293,12 @@
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
                                       <h4 class="item-title">Brand Campaign</h4>
-                                      <h5 class="item-subtitle"><div>Orchestrate content &amp; communications via digital &amp; traditional channels to associate brand with customer "jobs". Track, test, tune tactics.</div></h5>
+                                      <h5 class="item-subtitle"><div>Orchestrate content &amp; communications via digital &amp; traditional channels to build brand association. Track, test, tune tactics.</div></h5>
                                       <div class="price-block">
                                           <span class="shop-item-price"></span>
                                       </div>
                                       <div class="card-description"><p></p><ul><li>Digital: website, search engine (organic &amp; paid), social media, email &amp; newsletter</li><li>Traditional: press/media, events, direct mail</li><li>Integration: digital &amp; traditional/physical</li><li>Automation: email, social media and more</li><li>Analytics: by channel</li></ul><p></p></div>   
-                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured-blocks.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
+                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
                                   </div>        
                               </div>
                           </div><div class="mbr-gallery-item mbr-gallery-item__mobirise3" data-tags="Market" data-seller="false">
@@ -310,7 +310,7 @@
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
                                       <h4 class="item-title">Product|Market Launch</h4>
-                                      <h5 class="item-subtitle"><div>Introduce new product or enter new market with pre-launch readiness, launch events, post-launch actions.</div></h5>
+                                      <h5 class="item-subtitle"><div>Introduce new product or enter new market with pre-launch readiness, launch content &amp; communications, post-launch actions.</div></h5>
                                       <div class="price-block">
                                           <span class="shop-item-price"></span>
                                       </div>
@@ -349,7 +349,7 @@
                                           <span class="shop-item-price"></span>
                                       </div>
                                       <div class="card-description"><p></p><ul><li>Digital: website, search engine (organic &amp; paid), social media, email &amp; newsletter</li><li>Traditional: press/media, events, direct mail</li><li>Integration: digital &amp; traditional/physical</li><li>Automation: email, social media and more</li><li>Analytics: by channel</li></ul><p></p></div>   
-                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured-blocks.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
+                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
                                   </div>        
                               </div>
                           </div><div class="mbr-gallery-item mbr-gallery-item__mobirise3" data-tags="Brand" data-seller="false">
@@ -383,7 +383,7 @@
                                           <span class="shop-item-price"></span>
                                       </div>
                                       <div class="card-description"><p></p><ul><li>Customer Survey</li><li>Interviews / Peer Groups</li><li>Advisory Board</li></ul><p></p></div>   
-                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured-blocks.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
+                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="featured.html" class="btn btn-primary" style="position: relative; display: inline-block;">More</a></div>
                                   </div>        
                               </div>
                           </div><div class="mbr-gallery-item mbr-gallery-item__mobirise3" data-tags="Market" data-seller="false">
@@ -467,7 +467,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-info-outline btn-info" href="featured-blocks.html"><strong>SEE FEATURED BLOCKS</strong></a></div>
+                <div class="text-xs-center"> <a class="btn btn-info-outline btn-info" href="featured.html"><strong>SEE FEATURED</strong></a></div>
             </div>
         </div>
     </div>
@@ -485,7 +485,7 @@
                 <p><strong>BUSINESS</strong><br><a href="startups.html" class="text-danger">Startups</a><br><span style="font-size: 0.875rem; line-height: 1.5;"><a href="non-profits.html" class="text-danger">Non-Profits</a></span><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>SOLUTIONS</strong><br><a href="featured-blocks.html" class="text-danger">Featured</a><br></p>
+                <p><strong>SERVICES</strong><br><a href="featured.html" class="text-danger">Featured</a><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>RESOURCES</strong><br><a href="privacy.html" class="text-danger">Privacy</a></p>
