--- a/#marketing-blocks.html
+++ b/#marketing-blocks.html
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop web creator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-1y" style="background-image: url(assets/images/business-teamwork-on-puzzle-pieces-to-success-1.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple web page maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-1y" style="background-image: url(assets/images/business-teamwork-on-puzzle-pieces-to-success-1.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
 
