--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="about.html" aria-expanded="false">ABOUT</a></li><li class="nav-item dropdown"><a class="nav-link link" href="featured-blocks.html" aria-expanded="false">SOLUTIONS</a></li><li class="nav-item"><a class="nav-link link" href="startups.html" aria-expanded="false">STARTUPS</a></li><li class="nav-item"><a class="nav-link link" href="non-profits.html" aria-expanded="false">NONPROFITS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="contact.html">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="about.html" aria-expanded="false">ABOUT</a></li><li class="nav-item dropdown"><a class="nav-link link" href="featured.html" aria-expanded="false">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="startups.html" aria-expanded="false">STARTUPS</a></li><li class="nav-item"><a class="nav-link link" href="non-profits.html" aria-expanded="false">NONPROFITS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="contact.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -72,14 +72,14 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free drag and drop web creator</a></section><section class="mbr-section mbr-after-navbar" id="form1-2a" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop web page development software</a></section><section class="mbr-section mbr-after-navbar" id="form1-2a" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-xs-center">
                     <h3 class="mbr-section-title display-2">CONNECT WITH US</h3>
-                    <small class="mbr-section-subtitle">We'd love to discuss your growth challenge!<br><br><strong>hello@saasify.io<br>+1 (434) TRY-SAAS</strong><br></small>
+                    <small class="mbr-section-subtitle">Let us tackle your growth challenge!<br><br><strong>hello@saasify.io<br>+1 (434) TRY-SAAS</strong><br></small>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONNECT WITH US">
 
-                        <input type="hidden" value="CTHIGFXVNFzo7zpytCBeGOiC+qPJJ6tXxuS3iHV2Jtj7HycEPeLJLJM5warenQKyMhuANlmcsPgj78SOUGwp/Ik1Z08/FvfGjnctPP2Fjb/JTx/6k2BXIhma1y1Jfadz" data-form-email="true">
+                        <input type="hidden" value="uL8IYVw0zkkzn5NnYr9c+n21omKUxsWUMolXEQdSeg+5+lXH3A7qkLBjIyxnmaXNgZsXGTBb5mFHJ2WezTg7CtYgIYH3A/plHKqAbk7RYoLHTTepimnH6STEAAkPCROx" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
