--- a/startups.html
+++ b/startups.html
@@ -62,7 +62,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="about.html" aria-expanded="false">ABOUT</a></li><li class="nav-item dropdown"><a class="nav-link link" href="featured-blocks.html" aria-expanded="false">SOLUTIONS</a></li><li class="nav-item"><a class="nav-link link" href="startups.html" aria-expanded="false">STARTUPS</a></li><li class="nav-item"><a class="nav-link link" href="non-profits.html" aria-expanded="false">NONPROFITS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="contact.html">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="about.html" aria-expanded="false">ABOUT</a></li><li class="nav-item dropdown"><a class="nav-link link" href="featured.html" aria-expanded="false">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="startups.html" aria-expanded="false">STARTUPS</a></li><li class="nav-item"><a class="nav-link link" href="non-profits.html" aria-expanded="false">NONPROFITS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="contact.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-3b" style="background-image: url(assets/images/small-business-startup-resize.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top responsive site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-3b" style="background-image: url(assets/images/small-business-startup-resize.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">Marketing For Growth</h3>
-                <small class="mbr-section-subtitle">40% of top 20 reasons startups fail are marketing related led by market need and competition. How do you ensure market fit and compete to gain mindshare for your promise and marketshare for your product with limited marketing investment, team or capability?&nbsp;Build your own Marketing-As-Service to take on your specific brand, product, customer demand or retention objective.<br></small>
+                <small class="mbr-section-subtitle">40% of top 20 reasons startups fail are marketing related, led by market need and competition. How do you ensure market fit and compete to gain mindshare for your promise and marketshare for your product with limited marketing investment, team or capability?&nbsp;Build your own Marketing-As-Service to take on your specific brand, product, customer demand or retention objective.<br></small>
             </div>
         </div>
     </div>
@@ -126,7 +126,7 @@
 
                         <div class="mbr-table-cell mbr-right-padding-md-up col-md-7 text-xs-center text-md-left">
 
-                                <h2 class="display-2 h-black">CMO SERVICES</h2>
+                                <h2 class="display-2 h-black">STRATEGIC MARKETING</h2>
 
                                 <div class="row">
                                 <div class="col-md-12 parent">
@@ -224,7 +224,7 @@
 
                         <small class="feature-subtitle">Market | Customers | Competition | Product</small>
 
-                        <p class="description">Validate market readiness and brand promise. Assess product capabilities against customer needs/pains, competition/alternatives. Guide product roadmap and market positioning.&nbsp;<br></p>
+                        <p class="description">Validate market readiness. Assess product capabilities against customer needs/pains, competition/alternatives. Guide product roadmap, market positioning, sales enablement.&nbsp;<br></p>
 
                     </div>
                     <div class="icon-right"><span class="etl-icon icon-mobile mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
@@ -264,7 +264,7 @@
 
                         <small class="feature-subtitle">Digital &amp; Offline | Automation | Analytics</small>
 
-                        <p class="description">Orchestrate content and communications across channels - dgital (web, search, social, email, ads) &amp; offline (PR, events). Engage/Nurture customers and generate leads via trigger and planned campaigns. Track, test, tune tactics.<br></p>
+                        <p class="description">Orchestrate content &amp; communications across channels - dgital (web, search, social, email, ads) &amp; offline (PR, events). Nurture customers and generate leads via trigger/planned campaigns. Track, test, tune tactics.<br></p>
 
                     </div>
                 </div>
@@ -279,7 +279,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-info" href="index.html"><strong>SEE ALL BLOCKS</strong></a> <a class="btn btn-info-outline btn-info" href="featured-blocks.html"><strong>SEE FEATURED BLOCKS</strong></a></div>
+                <div class="text-xs-center"><a class="btn btn-info" href="index.html"><strong>SEE ALL SERVICES</strong></a> <a class="btn btn-info-outline btn-info" href="featured-blocks.html"><strong>SEE FEATURED</strong></a></div>
             </div>
         </div>
     </div>
